--- a/ui/src/assets/player.html
+++ b/ui/src/assets/player.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
-    <title>webPlayer</title>
+    <link rel="icon" type="image/png" href="/~/www/icons/16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="/~/www/icons/32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/~/www/icons/96.png" sizes="96x96"/>
+    <title>Player</title>
 </head>
 <body>
     <div id="root"></div>
